added code to kill runaway tomcat6 instances in CandlepinTasks.deploy